--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,160 @@
 en:
   language_name: 'English'
+  views:
+    layout:
+      application:
+        title: 'Covid Wildlife Tourism'
+    home:
+      index:
+        title: 'Covid Wildlife Tourism'
+        intro: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt tincidunt lectus, a laoreet mauris. Vivamus vestibulum consequat neque at consequat. Aliquam ex augue, semper in eleifend ut, maximus id. '
+        explore: 'Explore the map'
+    devise:
+      confirmations:
+        intro: Write your email and we'll send you new confirmation instructions.
+        confirmation_instructions: Confirmation instructions
+        send_confirmation_instructions: Send confirmation instructions
+      passwords:
+        intro: Write your email and we'll send you the password instructions.
+        password_instructions: Password instructions
+        send_password_instructions: Send password instructions
+      sessions:
+        forgot_password: Forgot my password
+        resend_confirmation_instructions: Resend confirmation instructions
+    shared:
+      log_in: Log in
+      register: 'Register'
+    stats:
+      index:
+        title: 'Usage statistics'
+        total: 'Total'
+        totals: 'Total records in the system'
+        total_users: 'Users per role'
+        total_stores: 'Active stores per type'
+        total_statuses: 'Statuses per store type'
+        daily_ranking: 'Daily rankings'
+        total_ranking: 'Global rankings'
+        break_per_day: 'Daily evolution'
+        users_per_day: 'New users per day'
+        statuses_per_day: 'Total statuses reported per day'
+        todays_stores_by_reports: "Today's top 15 stores by reports"
+        todays_users_by_reports: "Today's top 15 users by reports"
+        stores_by_reports: 'Stores by number of reports'
+        users_by_reports: 'Users by number of reports'
+    actions:
+      show: 'Show'
+      edit: 'Edit'
+      destroy: 'Delete'
+      title: 'Actions'
+      new: 'New'
+      back: 'Back'
+      approve_all: 'Approve listed'
+      confirm_destroy: 'Are you sure you want to remove this record? This action is permanent'
+      download: 'Download (.csv)'
+    map:
+      index:
+        title: 'Map'
+        add_store: 'Create store'
+        edit: 'Edit'
+        delete_store: 'Delete store'
+        cancel: 'Cancel'
+        delete: 'Delete'
+        close: 'Close'
+        save: 'Save'
+        confirm: 'Confirm'
+        editing: 'Editing store'
+        deleting: 'Deleting store'
+        creating: 'Adding store'
+        remove_note: 'NOTE: When marking a store for deletion, please write the reason on the details field.'
+    edit:
+      title: 'Editing %{resource}'
+    form:
+      submit: 'Submit'
+    stores:
+      search:
+        placeholder: 'Search by name or address...'
+        button: 'Search'
+        filter_country: 'Filter by country'
+        filter_group: 'Filter by group'
+        filter_state: 'Filter by state'
+        filter_store_type: 'Filter by type'
+      index:
+        confirm_approval: 'Are you sure you want to approve all stores?'
+      show:
+        coordinates: 'Coordinates'
+        statuses: 'Reported statuses'
+      statuses:
+        title: '%{store} reported statuses'
+      form:
+        help_open: 'The store is in operation during the pandemic?'
+        help_group: "Example: Tesco, Sainsbury's, Cooperative, etc."
+        help_country: 'Example: Portugal, España, United Kingdom, etc.'
+        help_coordinates: 'Latitude and Longitude are required for the store to be available in the application.'
+        help_state_html:
+          '<strong>Waiting approval</strong>: An Admin will review the information and approve it;<br>
+          <strong>Live</strong>: Store is available in the application;<br>
+          <strong>Marked for deletion</strong>: The information will be reviewed and confirmed by an admin.'
+        info_deleting: 'NOTE: When marking a store for deletion, please write the reason on the details field.'
+        phone_number: 'Phone Numbers'
+        add_phone: 'Add Phone'
+        schedule: 'Schedule'
+        phone_call_interval: 'Phone Call Interval (minutes)'
+    beaches:
+      index:
+        title: 'Beaches'
+        entry_name: 'beach'
+    status_crowdsource_users:
+      index:
+        title: 'Reported statuses'
+      search:
+        filter_type: 'Filter by type'
+        button: 'Filter'
+    users:
+      search:
+        placeholder: 'Search by name or email...'
+        button: 'Search'
+        filter_role: 'Filter by role'
+        filter_created: 'With stores created'
+        word_yes: 'Yes'
+      index:
+        stores_created: 'Stores created'
+      show:
+        stores_created: 'Stores created'
+        stores_owned: 'Managed stores'
+        statuses: 'Estados reportados'
+        copy_clipboard: 'Copy to clipboard'
+        regenerate_store_owner_code: 'Generate new store owner code'
+        regenerate_api_key: 'Generate new API key'
+      statuses:
+        title: 'Statuses reported by %{user}'
+    user_stores:
+      index:
+        approve: 'Approve'
+    manage_stores:
+      index:
+        nav: 'My stores'
+        manage_link: 'Update state'
+        latest_status: 'Last state reported'
+        state_valid_until: '%{state} | Valid until %{time}'
+        state_invalid: '%{state} | Expired'
+        '0': 'No queue'
+        '5': 'Average queue'
+        '10': 'Long queue'
+    status_store_owners:
+      new:
+        title: 'Updatings state of store %{resource}'
+        no_queue: 'No queue'
+        average_queue: 'Average queue'
+        long_queue: 'Long queue'
+        title_latest: 'Last state reported'
+        valid_until: 'Valid until %{time}'
+        expired_on: 'Expired at %{time}'
+        '0': 'No queue'
+        '5': 'Average queue'
+        '10': 'Long queue'
+    status_estimations:
+      index:
+        title: 'Estimated Statuses'
   activerecord:
     models:
       store:
@@ -93,161 +248,3 @@ en:
     stores:
       approve_all:
         notice: '%{size} stores approved'
-  views:
-    layout:
-      application:
-        title: 'Covid Wildlife Tourism'
-    home:
-      index:
-        title: 'Covid Wildlife Tourism'
-        intro: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt tincidunt lectus, a laoreet mauris. Vivamus vestibulum consequat neque at consequat. Aliquam ex augue, semper in eleifend ut, maximus id. '
-        explore: 'Explore the map'
-    stats:
-      index:
-        title: 'Usage statistics'
-        total: 'Total'
-        totals: 'Total records in the system'
-        total_users: 'Users per role'
-        total_stores: 'Active stores per type'
-        total_statuses: 'Statuses per store type'
-        daily_ranking: 'Daily rankings'
-        total_ranking: 'Global rankings'
-        break_per_day: 'Daily evolution'
-        users_per_day: 'New users per day'
-        statuses_per_day: 'Total statuses reported per day'
-        todays_stores_by_reports: "Today's top 15 stores by reports"
-        todays_users_by_reports: "Today's top 15 users by reports"
-        stores_by_reports: 'Stores by number of reports'
-        users_by_reports: 'Users by number of reports'
-    actions:
-      show: 'Show'
-      edit: 'Edit'
-      destroy: 'Delete'
-      title: 'Actions'
-      new: 'New'
-      back: 'Back'
-      approve_all: 'Approve listed'
-      confirm_destroy: 'Are you sure you want to remove this record? This action is permanent'
-      download: 'Download (.csv)'
-    map:
-      index:
-        title: 'Map'
-        add_store: 'Create store'
-        edit: 'Edit'
-        delete_store: 'Delete store'
-        cancel: 'Cancel'
-        delete: 'Delete'
-        close: 'Close'
-        save: 'Save'
-        confirm: 'Confirm'
-        editing: 'Editing store'
-        deleting: 'Deleting store'
-        creating: 'Adding store'
-        remove_note: 'NOTE: When marking a store for deletion, please write the reason on the details field.'
-    edit:
-      title: 'Editing %{resource}'
-    shared:
-      log_in: Log in
-      register: 'Register'
-      forgot_password: Forgot my password
-      resend_confirmation_instructions: Resend confirmation instructions
-      navbar:
-        stats: 'Metrics'
-        current: 'Current'
-        logout: 'Log out'
-        login: 'Log in'
-        sign_up: 'Sign up'
-        profile: 'Profile page'
-        change_password: 'Change password'
-        approve_store_allocations: 'Validate store allocations'
-    form:
-      submit: 'Submit'
-    stores:
-      search:
-        placeholder: 'Search by name or address...'
-        button: 'Search'
-        filter_country: 'Filter by country'
-        filter_group: 'Filter by group'
-        filter_state: 'Filter by state'
-        filter_store_type: 'Filter by type'
-      index:
-        confirm_approval: 'Are you sure you want to approve all stores?'
-      show:
-        coordinates: 'Coordinates'
-        statuses: 'Reported statuses'
-      statuses:
-        title: '%{store} reported statuses'
-      form:
-        help_open: 'The store is in operation during the pandemic?'
-        help_group: "Example: Tesco, Sainsbury's, Cooperative, etc."
-        help_country: 'Example: Portugal, España, United Kingdom, etc.'
-        help_coordinates: 'Latitude and Longitude are required for the store to be available in the application.'
-        help_state_html:
-          '<strong>Waiting approval</strong>: An Admin will review the information and approve it;<br>
-          <strong>Live</strong>: Store is available in the application;<br>
-          <strong>Marked for deletion</strong>: The information will be reviewed and confirmed by an admin.'
-        info_deleting: 'NOTE: When marking a store for deletion, please write the reason on the details field.'
-        phone_number: 'Phone Numbers'
-        add_phone: 'Add Phone'
-        schedule: 'Schedule'
-        phone_call_interval: 'Phone Call Interval (minutes)'
-    beaches:
-      index:
-        title: 'Beaches'
-        entry_name: 'beach'
-    status_crowdsource_users:
-      index:
-        title: 'Reported statuses'
-      search:
-        filter_type: 'Filter by type'
-        button: 'Filter'
-    devise:
-      registrations:
-        new:
-          help_stores: 'Search and pick your stores, an admin will later validate them.'
-    users:
-      search:
-        placeholder: 'Search by name or email...'
-        button: 'Search'
-        filter_role: 'Filter by role'
-        filter_created: 'With stores created'
-        word_yes: 'Yes'
-      index:
-        stores_created: 'Stores created'
-      show:
-        stores_created: 'Stores created'
-        stores_owned: 'Managed stores'
-        statuses: 'Estados reportados'
-        copy_clipboard: 'Copy to clipboard'
-        regenerate_store_owner_code: 'Generate new store owner code'
-        regenerate_api_key: 'Generate new API key'
-      statuses:
-        title: 'Statuses reported by %{user}'
-    user_stores:
-      index:
-        approve: 'Approve'
-    manage_stores:
-      index:
-        nav: 'My stores'
-        manage_link: 'Update state'
-        latest_status: 'Last state reported'
-        state_valid_until: '%{state} | Valid until %{time}'
-        state_invalid: '%{state} | Expired'
-        '0': 'No queue'
-        '5': 'Average queue'
-        '10': 'Long queue'
-    status_store_owners:
-      new:
-        title: 'Updatings state of store %{resource}'
-        no_queue: 'No queue'
-        average_queue: 'Average queue'
-        long_queue: 'Long queue'
-        title_latest: 'Last state reported'
-        valid_until: 'Valid until %{time}'
-        expired_on: 'Expired at %{time}'
-        '0': 'No queue'
-        '5': 'Average queue'
-        '10': 'Long queue'
-    status_estimations:
-      index:
-        title: 'Estimated Statuses'
