--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,12 +21,17 @@ en:
       sessions:
         forgot_password: Forgot my password
         resend_confirmation_instructions: Resend confirmation instructions
-    map:
-      edit_profile: Edit profile
+      registrations:
+        can_leave_blank: Leave blank if you don't want to change it.
+        new_password: New password
+        new_password_confirmation: New password confirmation
+        update: Update
+        close_account: Close account
     shared:
       log_in: Log in
       log_out: Log out
       register: 'Register'
+      edit_profile: Edit profile
     stats:
       index:
         title: 'Usage statistics'
