--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,16 +33,23 @@ en:
       standard: Standard
       satellite: Satellite
       drawer_menu: Drawer menu
-      add_pin: Add pin
       login_or_register: Log in or register
       login_wall_intro: To add a pin or report an error, you need to have an account.
       protected_areas_layer: Protected areas layer
+    pins:
+      add_pin_intro: Add a pin on the map by selecting a location on the map and filling some information.
+      type_intro: What type of place do you want to add?
+      type_community: Communities central to Nature-based Tourism
+      type_business: Small and Medium Tourism Enterprises
+      select_location: Select a location
+      select_type_error: Type of place can't be blank
     shared:
       log_in: Log in
       log_out: Log out
       register: 'Register'
       edit_profile: Edit profile
       close_dialog: Close this dialog window
+      add_pin: Add a pin
     stats:
       index:
         title: 'Usage statistics'
