Implement the 2nd step of the pin creation
This is the screen where the user click on the map to set its location.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,7 @@ en:
       edit_profile: Edit profile
       close_dialog: Close this dialog window
       add_pin: Add a pin
+      cancel: Cancel
     stats:
       index:
         title: 'Usage statistics'
