Let the users edit pins

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,6 +76,7 @@ en:
       edit_profile: Edit profile
       close_dialog: Close this dialog window
       add_pin: Add a pin
+      edit_pin: Edit a pin
       cancel: Cancel
       save: Save
       edit: Edit
