--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,6 +69,10 @@ en:
       accommodation_camping_site: Camping site
       accommodation_guesthouse: Guesthouse
       accommodation_other: Other
+    admin:
+      stores:
+        search_placeholder: Search by name
+        state: State
     shared:
       log_in: Log in
       log_out: Log out
@@ -80,141 +84,27 @@ en:
       cancel: Cancel
       save: Save
       edit: Edit
+      show: Show
       delete: Delete
       other: Other
       report_error: Report an error
       send_suggestions: Send suggestions
-    stats:
-      index:
-        title: 'Usage statistics'
-        total: 'Total'
-        totals: 'Total records in the system'
-        total_users: 'Users per role'
-        total_stores: 'Active stores per type'
-        total_statuses: 'Statuses per store type'
-        daily_ranking: 'Daily rankings'
-        total_ranking: 'Global rankings'
-        break_per_day: 'Daily evolution'
-        users_per_day: 'New users per day'
-        statuses_per_day: 'Total statuses reported per day'
-        todays_stores_by_reports: "Today's top 15 stores by reports"
-        todays_users_by_reports: "Today's top 15 users by reports"
-        stores_by_reports: 'Stores by number of reports'
-        users_by_reports: 'Users by number of reports'
-    actions:
-      show: 'Show'
-      edit: 'Edit'
-      destroy: 'Delete'
-      title: 'Actions'
-      new: 'New'
-      back: 'Back'
-      approve_all: 'Approve listed'
-      confirm_destroy: 'Are you sure you want to remove this record? This action is permanent'
-      download: 'Download (.csv)'
-    edit:
-      title: 'Editing %{resource}'
-    form:
-      submit: 'Submit'
-    stores:
-      search:
-        placeholder: 'Search by name or address...'
-        button: 'Search'
-        filter_country: 'Filter by country'
-        filter_group: 'Filter by group'
-        filter_state: 'Filter by state'
-        filter_store_type: 'Filter by type'
-      index:
-        confirm_approval: 'Are you sure you want to approve all stores?'
-      show:
-        coordinates: 'Coordinates'
-        statuses: 'Reported statuses'
-      statuses:
-        title: '%{store} reported statuses'
-      form:
-        help_open: 'The store is in operation during the pandemic?'
-        help_group: "Example: Tesco, Sainsbury's, Cooperative, etc."
-        help_country: 'Example: Portugal, España, United Kingdom, etc.'
-        help_coordinates: 'Latitude and Longitude are required for the store to be available in the application.'
-        help_state_html:
-          '<strong>Waiting approval</strong>: An Admin will review the information and approve it;<br>
-          <strong>Live</strong>: Store is available in the application;<br>
-          <strong>Marked for deletion</strong>: The information will be reviewed and confirmed by an admin.'
-        info_deleting: 'NOTE: When marking a store for deletion, please write the reason on the details field.'
-        phone_number: 'Phone Numbers'
-        add_phone: 'Add Phone'
-        schedule: 'Schedule'
-        phone_call_interval: 'Phone Call Interval (minutes)'
-    beaches:
-      index:
-        title: 'Beaches'
-        entry_name: 'beach'
-    status_crowdsource_users:
-      index:
-        title: 'Reported statuses'
-      search:
-        filter_type: 'Filter by type'
-        button: 'Filter'
-    users:
-      search:
-        placeholder: 'Search by name or email...'
-        button: 'Search'
-        filter_role: 'Filter by role'
-        filter_created: 'With stores created'
-        word_yes: 'Yes'
-      index:
-        stores_created: 'Stores created'
-      show:
-        stores_created: 'Stores created'
-        stores_owned: 'Managed stores'
-        statuses: 'Estados reportados'
-        copy_clipboard: 'Copy to clipboard'
-        regenerate_store_owner_code: 'Generate new store owner code'
-        regenerate_api_key: 'Generate new API key'
-      statuses:
-        title: 'Statuses reported by %{user}'
-    user_stores:
-      index:
-        approve: 'Approve'
-    manage_stores:
-      index:
-        nav: 'My stores'
-        manage_link: 'Update state'
-        latest_status: 'Last state reported'
-        state_valid_until: '%{state} | Valid until %{time}'
-        state_invalid: '%{state} | Expired'
-        '0': 'No queue'
-        '5': 'Average queue'
-        '10': 'Long queue'
-    status_store_owners:
-      new:
-        title: 'Updatings state of store %{resource}'
-        no_queue: 'No queue'
-        average_queue: 'Average queue'
-        long_queue: 'Long queue'
-        title_latest: 'Last state reported'
-        valid_until: 'Valid until %{time}'
-        expired_on: 'Expired at %{time}'
-        '0': 'No queue'
-        '5': 'Average queue'
-        '10': 'Long queue'
-    status_estimations:
-      index:
-        title: 'Estimated Statuses'
+      pins_list: Pins list
+      download: Download
+      search: Search
+      type: Type
+      actions: Actions
   activerecord:
     models:
       store:
-        one: 'Store'
-        other: 'Stores'
+        one: 'Pin'
+        other: 'Pins'
       user:
         one: 'User'
         other: 'Users'
-      user_store:
-        one: 'Managed Store'
-        other: 'Managed Stores'
     attributes:
       store:
         name: 'Name'
-        group: 'Group'
         street: 'Address'
         city: 'City'
         district: 'District'
@@ -222,74 +112,22 @@ en:
         zip_code: 'Zip Code'
         latitude: 'Latitude'
         longitude: 'Longitude'
-        capacity: 'Capacity'
-        details: 'Details'
-        store_type: 'Type of store'
         state: 'State'
-        open: 'Open?'
         created_by: 'Created by'
         updated_by: 'Updated by'
-        phones: 'Mobile phones'
       user:
         email: 'Email'
         name: 'Name'
-        role: 'Role'
-        app_uuid: 'UUID'
-        store_owner_code: 'Store owner code'
-      status_store_owner:
-        updated_time: 'Time'
-        status: 'State'
-      status:
-        type: 'Type'
-        updated_time: 'Time'
-        status: 'Status'
-        voters: 'Voters'
-        previous_status: 'Previous status'
-        previous_voters: 'Previous voters'
-        is_official: 'Official'
-        active: 'Active'
-        store: 'Store'
-      status_crowdsource_user:
-        posted_at: 'Time'
-        status: 'Status'
-        store: 'Store'
-        user: 'User'
-      api_key:
-        access_token: 'API Access token'
-      user_store:
-        approved: '¿Aprobada?'
     enums:
       user:
         roles:
           user: 'User'
-          store_owner: 'Store manager'
-          general_manager: 'General manager'
           admin: 'Administrator'
-          contributor: 'Contributor'
-          beach_admin: 'Administrator - Beaches'
-          beach_manager: 'Beach Manager'
       store:
         states:
           waiting_approval: 'Waiting approval'
           live: 'Active'
-          marked_for_deletion: 'Marked for deletion'
-          archived: 'Archived'
-        store_types:
-          restaurant: 'Restaurant'
-          supermarket: 'Supermarket'
-          pharmacy: 'Pharmacy'
-          gas_station: 'Gas station'
-          bank: 'Bank'
-          coffee: 'Café'
-          kiosk: 'Kiosk'
-          other: 'Other'
-          atm: 'ATM'
-          post_office: 'Post Office'
-          beach: 'Beach'
-        categories:
-          ocean: 'Sea side'
-          river: 'River side'
-  controllers:
-    stores:
-      approve_all:
-        notice: '%{size} stores approved'
+          to_replace: 'Replacement suggestion'
+        types:
+          Community: 'Community'
+          Enterprise: 'Enterprise'
