--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,6 +79,7 @@ en:
         pin_deleted_successfully: Pin deleted successfully
         pin_approved_successfully: Pin approved successfully
         pin_deleted_unsuccessfully: Unable to approve the pin
+        delete_confirmation: Are you sure? The pin will be permanently deleted.
     shared:
       log_in: Log in
       log_out: Log out
