Display the status of the pins for logged in users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,9 @@ en:
       login_wall_intro: To add a pin or report an error, you need to have an account.
       protected_areas_layer: Protected areas layer
       pin_details: Pin details
+      pin_approved: Approved
+      pin_pending: Pending approval
+      pin_pending_changes: Changes pending approval
     pins:
       add_pin_intro: Add a pin on the map by selecting a location on the map and filling some information.
       type_intro: What type of place do you want to add?
