Let admin users update coordinates through a map

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,6 +75,7 @@ en:
         pin_approved_successfully: Pin approved successfully
         pin_approved_unsuccessfully: Unable to approve the pin
         previously: Previously
+        previous_location_pin_color: The previous location is represented by the yellow pin
     shared:
       log_in: Log in
       log_out: Log out
