--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,6 +77,12 @@ en:
         pin_approved_unsuccessfully: Unable to approve the pin
         previously: Previously
         previous_location_pin_color: The previous location is represented by the yellow pin
+      users:
+        role: Role
+        all_roles: All roles
+        select_role: Select role
+        search_by_name: Search by name
+        pins_created: Pins created
     shared:
       log_in: Log in
       log_out: Log out
@@ -100,10 +106,13 @@ en:
       actions: Actions
       approve: Approve
       review: Review
-      delete_confirmation: Are you sure? The pin will be permanently deleted.
+      delete_pin_confirmation: Are you sure? The pin will be permanently deleted.
+      delete_user_confirmation: Are you sure? The user will be permanently deleted.
       users: Users
       pin_details: Pin details
+      user_details: User details
       click_map_to_update: Click the map to update the coordinates
+      new_user: New user
   activerecord:
     models:
       store:
