Add a title to each of the pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,6 +114,7 @@ en:
       click_map_to_update: Click the map to update the coordinates
       new_user: New user
       deleted_account: Deleted account
+      map: Map
   activerecord:
     models:
       store:
