--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,7 +66,7 @@ en:
       enterprise_type_other: If you selected other, indicate an enterprise type
       enterprise_type: Enterprise type
       tourism: Tourism
-      accomodation: Accomodation
+      accommodation: Accommodation
     admin:
       stores:
         state: State
