--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -179,3 +179,6 @@ en:
           protected_area: Protected area authority
           community_group: Community group
           other: Other
+  validators:
+    http_url:
+      not_valid: is not a valid URL
